Add `repository` to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-native-multi-picker-ios",
   "version": "0.1.0",
+  "repository": "github:aselivanov/react-native-multi-picker-ios",
   "main": "MultiPicker.js",
   "peerDependencies": {
     "react-native": "^0.41.2"
